--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "noImplicitAny": false,
+
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2017",
@@ -27,6 +32,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictNullChecks": false,
   }
 }
