--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "angular-cd-timer": "^1.3.0",
+    "angular-google-tag-manager": "^1.5.0",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.4.9",
     "ts-md5": "^1.2.11",
